# data-structures

./: .gitignore  README.md
binary_search_tree/: CMakeLists.txt
binary_search_tree/src/: binary_search_tree.c  binary_search_tree.h  main.c
binary_search_tree/test/: test_binary_search_tree.c
hash_table/: CMakeLists.txt
hash_table/src/: hash_table.h
hash_table/test/: cheat.h  test_hash_table.c
linked_list/: CMakeLists.txt
linked_list/src/: linked_list.c  linked_list.h  main.c  say_hello.c  say_hello.h
linked_list/test/: test_linked_list.c  test_say_hello.c
queue/: CMakeLists.txt
queue/src/: queue.c  queue.h
queue/test/: test_queue.c
stack/: CMakeLists.txt
stack/src/: main.c  stack.c  stack.h
stack/test/: test_stack.c
trie/: CMakeLists.txt
trie/src/: main.c  trie.c  trie.h
trie/src/array_list/: array_list.c  array_list.h
trie/test/: cheats.h  test_array_list.c  test_trie.c
